--- a/Bootstrap/column.html
+++ b/Bootstrap/column.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
         <div class="row">
-            <div class="col" style="border: 2px solid blueviolet;">column1</div>
+            <div class="col-md-6" style="border: 2px solid blueviolet;">column1</div>
             <div class="col" style="border: 2px solid blueviolet;">column2</div>
             <div class="col" style="border: 2px solid blueviolet;">column3</div>
             <div class="col" style="border: 2px solid blueviolet;">column4</div>
