--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="grid.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   </head>
-  <body class="d-flex justify-content-center align-items-center vh-100">
-    <div class="container d-flex text-center justify-content-center align-items-center">
+  <body class="bg-dark d-flex justify-content-center align-items-center vh-100">
+    <div class="container bg-primary d-flex text-center justify-content-center align-items-center">
         <div class="row">
-            <div class="col-md-2" style="border: 2px solid blueviolet;">column1</div>
+            <div class="col-md-12" style="border: 2px solid blueviolet;">column1</div>
             <div class="col" style="border: 2px solid blueviolet;">column2</div>
             <div class="col" style="border: 2px solid blueviolet;">column3</div>
             <div class="col" style="border: 2px solid blueviolet;">column4</div>
