--- a/Bootstrap/input-group.html
+++ b/Bootstrap/input-group.html
@@ -6,16 +6,44 @@
     <title>Input Group</title>
     <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
-<body class="bg-dark w-50 mx-auto mt-5">
+<body class="bg-dark w-25 mx-auto text-light">
+    <div class="input-group mt-5 mb-3">
+        <span class="input-group-text">@</span>
+        <input type="text" class="form-control" placeholder="Username">
+    </div>
+
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="search">
+        <button class="btn btn-outline-primary">GO</button>
+    </div>
+    <h1 class="display-5">Sizing</h1>
+    <div class="input-group input-group-sm mb-3">
+        <span class="input-group-text">@</span>
+        <input type="text" class="form-control" placeholder="Username">
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text">@</span>
+        <input type="text" class="form-control" placeholder="Username">
+    </div>
     <div class="input-group input-group-lg mb-3">
         <span class="input-group-text">@</span>
-        <input type="text" class="form-control" placeholder="username">
+        <input type="text" class="form-control" placeholder="Username">
     </div>
 
-    <div class="input-group input-group-lg mb-3">
-        <input type="text" class="form-control" placeholder="Recepient's Username">
-        <span class="input-group-text">@example.com</span>
+    <h1 class="display-5 mt-5">Checkbox</h1>
+    <div class="input-group">
+        <div class="input-group-text">
+            <input type="checkbox" class="form-check-input mt-0" checked>
+        </div>
+        <input type="text" class="form-control" placeholder="checkbox"> 
     </div>
-
+    <h1 class="display-5 mt-5">Radio</h1>
+    <div class="input-group input-group-lg">
+        <div class="input-group-text">
+            <input type="radio" class="form-check-input mt-0">
+        </div>
+        <input type="text" class="form-control" placeholder="Radio"> 
+    </div>
+    </div>
 </body>
-</html>
+</htm
