--- a/Bootstrap/components.html
+++ b/Bootstrap/components.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
 <body class="mx-2 my-2">
-    <!-- <div class="alert alert-primary">This is a primary alert</div>
+     <div class="alert alert-primary">This is a primary alert</div>
     <div class="alert alert-secondary">This is a secondary alert</div>
     <div class="alert alert-warning">This is a warning alert</div>
     <div class="alert alert-danger">This is a danger alert</div>
     <div class="alert alert-success">This is a success alert</div>
     <div class="alert alert-info">This is a info alert</div>
     <div class="alert alert-light">This is a light alert</div>
-    <div class="alert alert-dark">This is a dark alert</div> -->
+    <div class="alert alert-dark">This is a dark alert</div> 
 
-    <!-- <div class="alert alert-warning alert-dismissable fade show" role="alert">
+     <div class="alert alert-warning alert-dismissable fade show" role="alert">
         <strong>Warning!</strong> please check your input.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
-    </div> -->
+    </div> 
 
     <h1>Message <span class="badge bg-success">4</span></h1>
     <h2>notification <span class="badge bg-danger">9+</span></h2>
