--- a/Bootstrap/input-group.html
+++ b/Bootstrap/input-group.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Input Group</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body class="bg-dark w-25 mx-auto text-light">
     <div class="input-group mt-5 mb-3">
@@ -43,6 +43,16 @@
             <input type="radio" class="form-check-input mt-0">
         </div>
         <input type="text" class="form-control" placeholder="Radio"> 
+    </div>
+    <div class="input-group mt-5">
+        <span class="input-group-text" id="visible-addon">@</span>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="visible-addon">
+        <input type="text" class="form-control d-none" placeholder="Hidden input" aria-label="Hidden input" aria-describedby="visible-addon">
+    </div>
+    <div class="input-group mt-3">
+        <span class="input-group-text" id="visible-addon">@</span>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="visible-addon">
+        <input type="text" class="form-control d-none" placeholder="Hidden input" aria-label="Hidden input" aria-describedby="visible-addon">
     </div>
     </div>
 </body>
