--- a/JS/controlflow.html
+++ b/JS/controlflow.html
@@ -102,9 +102,11 @@
         // console.log(paragraph.length)
         // console.log(paragraph.includes("amet"))
 
-        let name = "Rahul"
-        let age = 23
-        console.log(`My name is ${name} and my age is ${age}`)
+        // let name = "Rahul";
+        // let age = 23;
+        // console.log(`My name is ${name} and my age is ${age}`);
+
+        
 
     </script>
     
